# gen-ai-nlp-lab-1

./: .gitignore  README.md  pyproject.toml
notebooks/: aya-23-8b-a100.ipynb  aya-23-8b-end-to-end.ipynb  aya-23-8b-final.ipynb  aya-23-8b-second-run.ipynb  aya-23-8b-test.ipynb  aya-23-8b-vllm.ipynb  eda.ipynb  merge_second_run.ipynb  merge_submissions.ipynb  preprocessing.ipynb  preprocessing_test.ipynb
params/: aya_23_8b.yml
src/prompts/: examples.py  original_examples.py  prompts.py
src/utils/: postprocess.py
